--- a/web/index.html
+++ b/web/index.html
@@ -1,38 +1,164 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
-
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
   <base href="$FLUTTER_BASE_HREF">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Untense - Therapeutic tension tracking diary app.">
+  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="untense">
+  <meta name="apple-mobile-web-app-title" content="Untense">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png">
 
-  <title>untense</title>
+  <title>Untense</title>
   <link rel="manifest" href="manifest.json">
+
+  <style>
+    html,
+    body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      background: #0B4C78;
+      background: linear-gradient(90deg, rgba(11, 76, 120, 1) 0%, rgba(14, 124, 123, 1) 100%);
+      overflow: hidden;
+    }
+
+    @media (prefers-color-scheme: dark) {
+
+      html,
+      body {
+        background: #0B4C78;
+        background: linear-gradient(90deg, rgba(11, 76, 120, 1) 0%, rgba(14, 124, 123, 1) 100%);
+      }
+
+      #splash {
+        background: #0B4C78;
+        background: linear-gradient(90deg, rgba(11, 76, 120, 1) 0%, rgba(14, 124, 123, 1) 100%);
+      }
+    }
+
+    /* Splash screen shown while Flutter engine loads */
+    #splash {
+      position: fixed;
+      inset: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      background: #0B4C78;
+      background: linear-gradient(90deg, rgba(11, 76, 120, 1) 0%, rgba(14, 124, 123, 1) 100%);
+      z-index: 1000;
+      transition: opacity 0.4s ease-out;
+    }
+
+    #splash img {
+      width: 120px;
+      height: 120px;
+      object-fit: contain;
+      animation: pulse 2s ease-in-out infinite;
+    }
+
+    #splash picture {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    #splash .app-name {
+      margin-top: 24px;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      font-size: 28px;
+      font-weight: 300;
+      color: rgba(255, 255, 255, 0.9);
+      letter-spacing: 4px;
+    }
+
+    #splash .loading-bar {
+      margin-top: 40px;
+      width: 160px;
+      height: 3px;
+      background: rgba(255, 255, 255, 0.15);
+      border-radius: 2px;
+      overflow: hidden;
+    }
+
+    #splash .loading-bar::after {
+      content: '';
+      display: block;
+      width: 50%;
+      height: 100%;
+      background: rgba(255, 255, 255, 0.6);
+      border-radius: 2px;
+      animation: loading 1.4s ease-in-out infinite;
+    }
+
+    @keyframes pulse {
+
+      0%,
+      100% {
+        opacity: 1;
+        transform: scale(1);
+      }
+
+      50% {
+        opacity: 0.85;
+        transform: scale(0.97);
+      }
+    }
+
+    @keyframes loading {
+      0% {
+        transform: translateX(-100%);
+      }
+
+      100% {
+        transform: translateX(320%);
+      }
+    }
+
+    #splash.fade-out {
+      opacity: 0;
+      pointer-events: none;
+    }
+  </style>
 </head>
+
 <body>
+  <!-- Splash screen — visible until Flutter first frame -->
+  <div id="splash">
+    <picture>
+      <source
+        srcset="splash/img/light-1x.png 1x, splash/img/light-2x.png 2x, splash/img/light-3x.png 3x, splash/img/light-4x.png 4x"
+        media="(prefers-color-scheme: light)">
+      <source
+        srcset="splash/img/dark-1x.png 1x, splash/img/dark-2x.png 2x, splash/img/dark-3x.png 3x, splash/img/dark-4x.png 4x"
+        media="(prefers-color-scheme: dark)">
+      <img src="splash/img/light-2x.png" alt="Untense Logo" />
+    </picture>
+    <div class="app-name">UNTENSE</div>
+    <div class="loading-bar"></div>
+  </div>
+
+  <script>
+    // Remove splash once Flutter renders first frame
+    window.addEventListener('flutter-first-frame', function () {
+      var splash = document.getElementById('splash');
+      if (splash) {
+        splash.classList.add('fade-out');
+        setTimeout(function () { splash.remove(); }, 400);
+      }
+    });
+  </script>
   <script src="flutter_bootstrap.js" async></script>
 </body>
+
 </html>
